--- a/src/BrewUp.Web/Client/wwwroot/appsettings.json
+++ b/src/BrewUp.Web/Client/wwwroot/appsettings.json
@@ -2,10 +2,9 @@
     "BrewUp": {
         "AppConfiguration": {
             "platform": "BrewUp",
-            "ProductionApiUri": "https://localhost:9043/",
-            "PubsApiUri": "https://brewuppubs.azurewebsites.net/",
-            "PubsApiUr1": "https://localhost:8043/",
-            "SignalRUri": "https://localhost:9043/"
+            "ProductionApiUri": "https://localhost:44314/",
+            "PubsApiUri": "https://localhost:44314/",
+            "SignalRUri": "https://localhost:44314/"
         }
     }
 }
