Add Pubs and Production Module: Create Tests

--- a/src/BrewUp.Web.Modules.Production.Extensions/BrewUp.Web.Modules.Production.Extensions.csproj
+++ b/src/BrewUp.Web.Modules.Production.Extensions/BrewUp.Web.Modules.Production.Extensions.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Messages\" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BrewUp.Web.Shared\BrewUp.Web.Shared.csproj" />
   </ItemGroup>
 
