--- a/src/BrewUp.Web.Modules.Production/BrewUp.Web.Modules.Production.csproj
+++ b/src/BrewUp.Web.Modules.Production/BrewUp.Web.Modules.Production.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,18 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <SupportedPlatform Include="browser" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.8" />
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.8" />
-    <PackageReference Include="MudBlazor" Version="6.2.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.13" />
+    <PackageReference Include="MudBlazor" Version="6.11.0" />
     <PackageReference Include="BlazorComponentBus" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Events\" />
+    <SupportedPlatform Include="browser" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.12" />
   </ItemGroup>
 
   <ItemGroup>
