--- a/src/BrewUp.Web.Modules.Pubs.Extensions/BrewUp.Web.Modules.Pubs.Extensions.csproj
+++ b/src/BrewUp.Web.Modules.Pubs.Extensions/BrewUp.Web.Modules.Pubs.Extensions.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -6,19 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+  </ItemGroup>
 
-	<ItemGroup>
-	  <Folder Include="Abstracts\" />
-	  <Folder Include="Concretes\" />
-	  <Folder Include="Messages\" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\BrewUp.Web.Shared\BrewUp.Web.Shared.csproj" />
-	</ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BrewUp.Web.Shared\BrewUp.Web.Shared.csproj" />
+  </ItemGroup>
 
 </Project>
