--- a/src/BrewUp.Web/Client/BrewUp.Web.Client.csproj
+++ b/src/BrewUp.Web/Client/BrewUp.Web.Client.csproj
@@ -1,42 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
-	<PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
-		<Nullable>enable</Nullable>
-		<ImplicitUsings>enable</ImplicitUsings>
-	</PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net7.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
+  </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.8" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.8" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.8" PrivateAssets="all" />
-		<PackageReference Include="Microsoft.Authentication.WebAssembly.Msal" Version="7.0.8" />
-		<PackageReference Include="MudBlazor" Version="6.2.5" />
-		<PackageReference Include="MudBlazor.ThemeManager" Version="1.0.8" />
-		<PackageReference Include="BlazorComponentBus" Version="2.2.0" />
-		<PackageReference Include="Serilog" Version="3.0.1" />
-		<PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
-		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-		<PackageReference Include="System.Net.Http.Json" Version="7.0.1" />
-		<PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
-		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.8" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.13" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.13" PrivateAssets="all" />
+    <PackageReference Include="MudBlazor" Version="6.11.0" />
+    <PackageReference Include="MudBlazor.ThemeManager" Version="1.0.8" />
+    <PackageReference Include="BlazorComponentBus" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.13" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<TrimmerRootAssembly Include="Microsoft.Authentication.WebAssembly.Msal" />
-	</ItemGroup>
+  <ItemGroup>
+    <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<BlazorWebAssemblyLazyLoad Include="BrewUp.Web.Modules.Production.dll" />
-		<BlazorWebAssemblyLazyLoad Include="BrewUp.Web.Modules.Pubs.dll" />
-	</ItemGroup>
+  <ItemGroup>
+    <BlazorWebAssemblyLazyLoad Include="BrewUp.Web.Modules.Pubs.dll" />
+    <BlazorWebAssemblyLazyLoad Include="BrewUp.Web.Modules.Production.dll" />
+  </ItemGroup>
 
-	<ItemGroup>
-	  <ProjectReference Include="..\..\BrewUp.Web.Modules.Production.Extensions\BrewUp.Web.Modules.Production.Extensions.csproj" />
-	  <ProjectReference Include="..\..\BrewUp.Web.Modules.Production\BrewUp.Web.Modules.Production.csproj" />
-	  <ProjectReference Include="..\..\BrewUp.Web.Modules.Pubs.Extensions\BrewUp.Web.Modules.Pubs.Extensions.csproj" />
-	  <ProjectReference Include="..\..\BrewUp.Web.Modules.Pubs\BrewUp.Web.Modules.Pubs.csproj" />
-	  <ProjectReference Include="..\..\BrewUp.Web.Modules.Shared.Extensions\BrewUp.Web.Modules.Shared.Extensions.csproj" />
-	</ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\BrewUp.Web.Modules.Production.Extensions\BrewUp.Web.Modules.Production.Extensions.csproj" />
+    <ProjectReference Include="..\..\BrewUp.Web.Modules.Production\BrewUp.Web.Modules.Production.csproj" />
+    <ProjectReference Include="..\..\BrewUp.Web.Modules.Pubs.Extensions\BrewUp.Web.Modules.Pubs.Extensions.csproj" />
+    <ProjectReference Include="..\..\BrewUp.Web.Modules.Pubs\BrewUp.Web.Modules.Pubs.csproj" />
+    <ProjectReference Include="..\..\BrewUp.Web.Shared\BrewUp.Web.Shared.csproj" />
+  </ItemGroup>
 
 </Project>
