--- a/src/BrewUp.Web/Server/BrewUp.Web.Server.csproj
+++ b/src/BrewUp.Web/Server/BrewUp.Web.Server.csproj
@@ -7,10 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.13" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\BrewUp.Web.Shared\BrewUp.Web.Shared.csproj" />
     <ProjectReference Include="..\Client\BrewUp.Web.Client.csproj" />
   </ItemGroup>
 
